[BUGFIX] Make text of extjs buttons and IE<10 pagetree labels visible
The task #52497 introduced a regression. The font-size set in body is
overridden in ext-all-notheme.css with font-size: 0px and thus needs to
be reset again in xtheme-t3skin.css.

Resolves: #55263
Related: #52497
Releases: 6.2
Reviewed-on: https://review.typo3.org/27166
Tested-by: Marcin Sągol
Tested-by: Stefan Froemken
Tested-by: Steffen Ritter

--- a/typo3/sysext/t3skin/extjs/xtheme-t3skin.css
+++ b/typo3/sysext/t3skin/extjs/xtheme-t3skin.css
@@ -767,6 +767,7 @@ ul.x-tab-strip-bottom{
 }
 
 .x-btn button {
+	font-size: 12px;
 }
 
 .x-btn em {
@@ -1403,6 +1404,7 @@ td.x-grid3-hd-over, td.x-grid3-hd-menu-open {
 
 .x-tree-node{
 	color:#000;
+	font-size: 12px;
 }
 
 .x-tree-node a, .x-dd-drag-ghost a {
